--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.2.3"
+    "autoprefixer": "^10.4.13",
+    "nuxt": "^3.2.3",
+    "nuxt-icon": "^0.3.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "daisyui": "^2.51.3",
+    "tailwind-scrollbar-hide": "^1.1.7"
   }
 }
